# openclaw-embodiment

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTEXT_ENGINE_SPEC.md  CONTRIBUTING.md  LICENSE  PRINCIPLES.md  README.md  ROADMAP.md  distiller-test-report.md  pyproject.toml
docs/: CNAME  CROSSWALK.md  index.html
docs/specs/: v1.1-agent-response-listener.md  v1.1-audio-trigger-detector.md  v1.1-status-indicator-hal.md  v1.1-transport-latency.md  v1.1-trigger-arbiter.md  v1.2-attachment-transport.md  v1.2-even-g2-audio.md  v1.2-heartbeat-wake.md  v1.2-local-mlx-transport.md  v1.2-microphone-stt-bridge.md  v1.2-reachy2-profile.md  v2.0-cross-embodiment.md  v2.0-hal-orchestrator.md  watchlist-android-xr.md  watchlist-meta-neural-band.md  watchlist-oat-action-tokenizer.md
docs/validation/: apple-vision-pro-validation-checklist.md  even-g2-validation-checklist.md  frame-glasses-validation-checklist.md  luxonis-oakd-validation-checklist.md  meta-rayban-validation-checklist.md  openglass-validation-checklist.md  pi-zero2w-validation-checklist.md  pi5-picam-validation-checklist.md  reachy-mini-validation-checklist.md  reachy-mini-wireless-validation-checklist.md  reachy2-validation-checklist.md  unitree-go2-validation-checklist.md
examples/hero_demo/: README.md  whiteboard_capture.py
examples/reachy_openclaw/: README.md  app.py  e2e_loop.py
openclaw_embodiment/: __init__.py  distiller_context_loop.py
openclaw_embodiment/cli/: main.py
openclaw_embodiment/context/: __init__.py  context_builder.py  models.py  sensor_context.py
openclaw_embodiment/core/: __init__.py  context_builder.py  exceptions.py  logging.py  multi_device.py  orchestrator.py  pipeline.py  response.py  trigger.py
openclaw_embodiment/discovery/: __init__.py  anomaly_detector.py  auto.py  discovery_loop.py  discovery_report.py  space_model.py  world_model.py
openclaw_wearable/: __init__.py
tests/: conftest.py  test_action_chunking.py  test_context_client.py  test_context_engine.py  test_context_engine_v2.py  test_discovery.py  test_hal_base.py  test_heartbeat_wake.py  test_ios_companion.py  test_mlx_transport.py  test_new_features.py  test_pipeline.py  test_profile_integration.py  test_response_listener.py  test_stt_bridge.py  test_transport_ble.py  test_v2_auto_discovery.py  test_v2_multi_device.py  test_v2_orchestrator.py  test_v2_system_health.py  test_v2_unified_transport.py
(+66 files in other folders)
